[gd_scene load_steps=154 format=2]

[ext_resource path="res://Resources/World2D.gd" type="Script" id=1]
[ext_resource path="res://Resources/AudioEffectSpectrumAnalyzerInstance.gd" type="Script" id=2]
[ext_resource path="res://Resources/ResourceImporter.gd" type="Script" id=3]
[ext_resource path="res://Resources/World.gd" type="Script" id=4]
[ext_resource path="res://Resources/AnimationTrackEditPlugin.gd" type="Script" id=5]
[ext_resource path="res://Resources/AudioEffectInstance.gd" type="Script" id=6]
[ext_resource path="res://Resources/EditorFeatureProfile.gd" type="Script" id=7]
[ext_resource path="res://Resources/AudioStreamPlayback.gd" type="Script" id=8]
[ext_resource path="res://Resources/Expression.gd" type="Script" id=9]
[ext_resource path="res://Resources/EditorExportPlugin.gd" type="Script" id=10]
[ext_resource path="res://Resources/EditorInspectorPlugin.gd" type="Script" id=11]
[ext_resource path="res://Resources/AudioStreamGeneratorPlayback.gd" type="Script" id=12]
[ext_resource path="res://Resources/CameraFeed.gd" type="Script" id=13]
[ext_resource path="res://Resources/Directory.gd" type="Script" id=14]
[ext_resource path="res://Resources/ConfigFile.gd" type="Script" id=15]
[ext_resource path="res://Resources/TCP_Server.gd" type="Script" id=16]
[ext_resource path="res://Resources/AudioStreamPlaybackResampled.gd" type="Script" id=17]
[ext_resource path="res://Resources/FuncRef.gd" type="Script" id=18]
[ext_resource path="res://Resources/HTTPClient.gd" type="Script" id=19]
[ext_resource path="res://Resources/File.gd" type="Script" id=20]
[ext_resource path="res://Resources/EditorSceneImporterAssimp.gd" type="Script" id=21]
[ext_resource path="res://Resources/EditorScenePostImport.gd" type="Script" id=22]
[ext_resource path="res://Resources/EditorImportPlugin.gd" type="Script" id=23]
[ext_resource path="res://Resources/EditorResourceConversionPlugin.gd" type="Script" id=24]
[ext_resource path="res://Resources/EditorResourcePreviewGenerator.gd" type="Script" id=25]
[ext_resource path="res://Resources/EditorScript.gd" type="Script" id=26]
[ext_resource path="res://Resources/EncodedObjectAsID.gd" type="Script" id=27]
[ext_resource path="res://Resources/EditorSpatialGizmo.gd" type="Script" id=28]
[ext_resource path="res://Resources/EditorSceneImporter.gd" type="Script" id=29]
[ext_resource path="res://Resources/SpatialGizmo.gd" type="Script" id=30]
[ext_resource path="res://Resources/PacketPeer.gd" type="Script" id=31]
[ext_resource path="res://Resources/MeshDataTool.gd" type="Script" id=32]
[ext_resource path="res://Resources/NetworkedMultiplayerPeer.gd" type="Script" id=33]
[ext_resource path="res://Resources/Marshalls.gd" type="Script" id=34]
[ext_resource path="res://Resources/KinematicCollision2D.gd" type="Script" id=35]
[ext_resource path="res://Resources/KinematicCollision.gd" type="Script" id=36]
[ext_resource path="res://Resources/GDScriptNativeClass.gd" type="Script" id=37]
[ext_resource path="res://Resources/SpatialVelocityTracker.gd" type="Script" id=38]
[ext_resource path="res://Resources/SceneState.gd" type="Script" id=39]
[ext_resource path="res://Resources/JSONParseResult.gd" type="Script" id=40]
[ext_resource path="res://Resources/GDNative.gd" type="Script" id=41]
[ext_resource path="res://Resources/GDScriptFunctionState.gd" type="Script" id=42]
[ext_resource path="res://Resources/Mutex.gd" type="Script" id=43]
[ext_resource path="res://Resources/WebSocketPeer.gd" type="Script" id=44]
[ext_resource path="res://Resources/PhysicsShapeQueryParameters.gd" type="Script" id=45]
[ext_resource path="res://Resources/WebSocketServer.gd" type="Script" id=46]
[ext_resource path="res://Resources/PacketPeerGDNative.gd" type="Script" id=47]
[ext_resource path="res://Resources/WebSocketMultiplayerPeer.gd" type="Script" id=48]
[ext_resource path="res://Resources/WebRTCMultiplayer.gd" type="Script" id=49]
[ext_resource path="res://Resources/WebSocketClient.gd" type="Script" id=50]
[ext_resource path="res://Resources/MultiplayerPeerGDNative.gd" type="Script" id=51]
[ext_resource path="res://Resources/NetworkedMultiplayerENet.gd" type="Script" id=52]
[ext_resource path="res://Resources/PCKPacker.gd" type="Script" id=53]
[ext_resource path="res://Resources/Physics2DShapeQueryParameters.gd" type="Script" id=54]
[ext_resource path="res://Resources/PacketPeerStream.gd" type="Script" id=55]
[ext_resource path="res://Resources/PacketPeerUDP.gd" type="Script" id=56]
[ext_resource path="res://Resources/WebRTCDataChannelGDNative.gd" type="Script" id=57]
[ext_resource path="res://Resources/WebRTCDataChannel.gd" type="Script" id=58]
[ext_resource path="res://Resources/PackerDatacontainerRef.gd" type="Script" id=59]
[ext_resource path="res://Resources/ResourveInteractiveLoader.gd" type="Script" id=60]
[ext_resource path="res://Resources/ResourceImporterOGGVorbis.gd" type="Script" id=61]
[ext_resource path="res://Resources/RandomNumberGenerator.gd" type="Script" id=62]
[ext_resource path="res://Resources/RegEx.gd" type="Script" id=63]
[ext_resource path="res://Resources/RegExMatch.gd" type="Script" id=64]
[ext_resource path="res://Resources/PhysicsShapeQueryResult.gd" type="Script" id=65]
[ext_resource path="res://Resources/Physics2DShapeQueryResult.gd" type="Script" id=66]
[ext_resource path="res://Resources/Physics2DTestMotionResult.gd" type="Script" id=67]
[ext_resource path="res://Resources/ResourceFormatLoader.gd" type="Script" id=68]
[ext_resource path="res://Resources/ResourceFormatSaver.gd" type="Script" id=69]
[ext_resource path="res://Resources/StreamPeerBuffer.gd" type="Script" id=70]
[ext_resource path="res://Resources/StreamPeerGDNative.gd" type="Script" id=71]
[ext_resource path="res://Resources/SurfaceTool.gd" type="Script" id=72]
[ext_resource path="res://Resources/StreamPeerSSL.gd" type="Script" id=73]
[ext_resource path="res://Resources/Variant.gd" type="Script" id=74]
[ext_resource path="res://Resources/String.gd" type="Script" id=75]
[ext_resource path="res://Resources/Rect2.gd" type="Script" id=76]
[ext_resource path="res://Resources/Transform.gd" type="Script" id=77]
[ext_resource path="res://Resources/RID.gd" type="Script" id=78]
[ext_resource path="res://Resources/StreamPeer.gd" type="Script" id=79]
[ext_resource path="res://Resources/SceneTreeTimer.gd" type="Script" id=80]
[ext_resource path="res://Resources/Semaphore.gd" type="Script" id=81]
[ext_resource path="res://Resources/ARVRPositionalTracker.gd" type="Script" id=82]
[ext_resource path="res://Resources/PhysicsDirectSpaceState.gd" type="Script" id=83]
[ext_resource path="res://Resources/BulletPhysicsDirectBodyState.gd" type="Script" id=84]
[ext_resource path="res://Resources/BulletPhysicsDirectSpaceState.gd" type="Script" id=85]
[ext_resource path="res://Resources/AudioServer.gd" type="Script" id=86]
[ext_resource path="res://Resources/CameraServer.gd" type="Script" id=87]
[ext_resource path="res://Resources/WebRTCPeerConnection.gd" type="Script" id=88]
[ext_resource path="res://Resources/WebRTCPeerConnectionGDNative.gd" type="Script" id=89]
[ext_resource path="res://Resources/XMLParser.gd" type="Script" id=90]
[ext_resource path="res://Resources/StreamPeerTCP.gd" type="Script" id=91]
[ext_resource path="res://Resources/Thread.gd" type="Script" id=92]
[ext_resource path="res://Resources/TriangleMesh.gd" type="Script" id=93]
[ext_resource path="res://Resources/UPNP.gd" type="Script" id=94]
[ext_resource path="res://Resources/UPNPDevice.gd" type="Script" id=95]
[ext_resource path="res://Resources/VisualScriptFunctionState.gd" type="Script" id=96]
[ext_resource path="res://Resources/WeakRef.gd" type="Script" id=97]
[ext_resource path="res://Resources/ARVRServer.gd" type="Script" id=98]
[ext_resource path="res://Resources/PhysicsDirectBodyState.gd" type="Script" id=99]
[ext_resource path="res://Resources/IP.gd" type="Script" id=100]
[ext_resource path="res://Resources/IP_Unix.gd" type="Script" id=101]
[ext_resource path="res://Resources/Input.gd" type="Script" id=102]
[ext_resource path="res://Resources/ClassDB.gd" type="Script" id=103]
[ext_resource path="res://Resources/EditorFileSystemDirectory.gd" type="Script" id=104]
[ext_resource path="res://Resources/EditorNavigationMeshGenerator.gd" type="Script" id=105]
[ext_resource path="res://Resources/BulletPhysicsServer.gd" type="Script" id=106]
[ext_resource path="res://Resources/PhysicsServer.gd" type="Script" id=107]
[ext_resource path="res://Resources/ProjectSettings.gd" type="Script" id=108]
[ext_resource path="res://Resources/ResourceLoader.gd" type="Script" id=109]
[ext_resource path="res://Resources/Engine.gd" type="Script" id=110]
[ext_resource path="res://Resources/Geometry.gd" type="Script" id=111]
[ext_resource path="res://Resources/EditorSelection.gd" type="Script" id=112]
[ext_resource path="res://Resources/ResourceSaver.gd" type="Script" id=113]
[ext_resource path="res://Resources/TranslationServer.gd" type="Script" id=114]
[ext_resource path="res://Resources/Physics2DServer.gd" type="Script" id=115]
[ext_resource path="res://Resources/Physics2DServerSW.gd" type="Script" id=116]
[ext_resource path="res://Resources/InputDefault.gd" type="Script" id=117]
[ext_resource path="res://Resources/JSON.gd" type="Script" id=118]
[ext_resource path="res://Resources/InputMap.gd" type="Script" id=119]
[ext_resource path="res://Resources/JavaScript.gd" type="Script" id=120]
[ext_resource path="res://Resources/MainLoop.gd" type="Script" id=121]
[ext_resource path="res://Resources/OS.gd" type="Script" id=122]
[ext_resource path="res://Resources/SceneTree.gd" type="Script" id=123]
[ext_resource path="res://Resources/Physics2DDirectBodyState.gd" type="Script" id=124]
[ext_resource path="res://Resources/Performance.gd" type="Script" id=125]
[ext_resource path="res://Resources/VisualScriptEditor.gd" type="Script" id=126]
[ext_resource path="res://Resources/Physics2DDirectBodyStateSW.gd" type="Script" id=127]
[ext_resource path="res://Resources/Physics2DDirectSpaceState.gd" type="Script" id=128]
[ext_resource path="res://Resources/Physics2DDirectSpaceStateSW.gd" type="Script" id=129]
[ext_resource path="res://Resources/bool.gd" type="Script" id=130]
[ext_resource path="res://Resources/float.gd" type="Script" id=131]
[ext_resource path="res://Resources/Vector3.gd" type="Script" id=132]
[ext_resource path="res://Resources/UndoRedo.gd" type="Script" id=133]
[ext_resource path="res://Resources/Array.gd" type="Script" id=134]
[ext_resource path="res://Resources/VisualServer.gd" type="Script" id=135]
[ext_resource path="res://Resources/Color.gd" type="Script" id=136]
[ext_resource path="res://Resources/TreeItem.gd" type="Script" id=137]
[ext_resource path="res://Resources/Basis.gd" type="Script" id=138]
[ext_resource path="res://Resources/PoolColorArray.gd" type="Script" id=139]
[ext_resource path="res://Resources/int.gd" type="Script" id=140]
[ext_resource path="res://Resources/PoolIntArray.gd" type="Script" id=141]
[ext_resource path="res://Resources/Transform2D.gd" type="Script" id=142]
[ext_resource path="res://Resources/Vector2.gd" type="Script" id=143]
[ext_resource path="res://Resources/PoolRealArray.gd" type="Script" id=144]
[ext_resource path="res://Resources/Dictionary.gd" type="Script" id=145]
[ext_resource path="res://Resources/Nil.gd" type="Script" id=146]
[ext_resource path="res://Resources/NodePath.gd" type="Script" id=147]
[ext_resource path="res://Resources/Plane.gd" type="Script" id=148]
[ext_resource path="res://Resources/PoolByteArray.gd" type="Script" id=149]
[ext_resource path="res://Resources/Quat.gd" type="Script" id=150]
[ext_resource path="res://Resources/PoolVector2Array.gd" type="Script" id=151]
[ext_resource path="res://Resources/PoolVector3Array.gd" type="Script" id=152]
[ext_resource path="res://Resources/PoolStringArray.gd" type="Script" id=153]

[node name="TODO 3" type="Node2D"]

[node name="World" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="World2D" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="AnimationTrackEditPlugin" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="AudioEffectInstance" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="AudioEffectSpectrumAnalyzerInstance" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="AudioStreamPlayback" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="AudioStreamPlaybackResampled" type="Node2D" parent="."]
script = ExtResource( 17 )

[node name="AudioStreamGeneratorPlayback" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="CameraFeed" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="ConfigFile" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="Directory" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="EditorExportPlugin" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="EditorFeatureProfile" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="EditorImportPlugin" type="Node2D" parent="."]
script = ExtResource( 23 )

[node name="EditorInspectorPlugin" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="EditorResourceConversionPlugin" type="Node2D" parent="."]
script = ExtResource( 24 )

[node name="EditorResourcePreviewGenerator" type="Node2D" parent="."]
script = ExtResource( 25 )

[node name="EditorSceneImporter" type="Node2D" parent="."]
script = ExtResource( 29 )

[node name="EditorSceneImporterAssimp" type="Node2D" parent="."]
script = ExtResource( 21 )

[node name="EditorScenePostImport" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="EditorScript" type="Node2D" parent="."]
script = ExtResource( 26 )

[node name="SpatialGizmo" type="Node2D" parent="."]
script = ExtResource( 30 )

[node name="EditorSpatialGizmo" type="Node2D" parent="."]
script = ExtResource( 28 )

[node name="EncodedObjectAsID" type="Node2D" parent="."]
script = ExtResource( 27 )

[node name="Expression" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="File" type="Node2D" parent="."]
script = ExtResource( 20 )

[node name="FuncRef" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="GDNative" type="Node2D" parent="."]
script = ExtResource( 41 )

[node name="GDScriptFunctionState" type="Node2D" parent="."]
script = ExtResource( 42 )

[node name="GDScriptNativeClass" type="Node2D" parent="."]
script = ExtResource( 37 )

[node name="HTTPClient" type="Node2D" parent="."]
script = ExtResource( 19 )

[node name="JSONParseResult" type="Node2D" parent="."]
script = ExtResource( 40 )

[node name="KinematicCollision" type="Node2D" parent="."]
script = ExtResource( 36 )

[node name="KinematicCollision2D" type="Node2D" parent="."]
script = ExtResource( 35 )

[node name="Marshalls" type="Node2D" parent="."]
script = ExtResource( 34 )

[node name="MeshDataTool" type="Node2D" parent="."]
script = ExtResource( 32 )

[node name="PacketPeer" type="Node2D" parent="."]
script = ExtResource( 31 )

[node name="NetworkedMultiplayerPeer" type="Node2D" parent="."]
script = ExtResource( 33 )

[node name="MultiplayerPeerGDNative" type="Node2D" parent="."]
script = ExtResource( 51 )

[node name="NetworkedMultiplayerENet" type="Node2D" parent="."]
script = ExtResource( 52 )

[node name="WebRTCMultiplayer" type="Node2D" parent="."]
script = ExtResource( 49 )

[node name="WebSocketMultiplayerPeer" type="Node2D" parent="."]
script = ExtResource( 48 )

[node name="WebSocketClient" type="Node2D" parent="."]
script = ExtResource( 50 )

[node name="WebSocketServer" type="Node2D" parent="."]
script = ExtResource( 46 )

[node name="PacketPeerGDNative" type="Node2D" parent="."]
script = ExtResource( 47 )

[node name="PacketPeerStream" type="Node2D" parent="."]
script = ExtResource( 55 )

[node name="PacketPeerUDP" type="Node2D" parent="."]
script = ExtResource( 56 )

[node name="WebRTCDataChannel" type="Node2D" parent="."]
script = ExtResource( 58 )

[node name="WebRTCDataChannelGDNative" type="Node2D" parent="."]
script = ExtResource( 57 )

[node name="WebSocketPeer" type="Node2D" parent="."]
script = ExtResource( 44 )

[node name="Mutex" type="Node2D" parent="."]
script = ExtResource( 43 )

[node name="PCKPacker" type="Node2D" parent="."]
script = ExtResource( 53 )

[node name="PackerDatacontainerRef" type="Node2D" parent="."]
script = ExtResource( 59 )

[node name="Physics2DShapeQueryParameters" type="Node2D" parent="."]
script = ExtResource( 54 )

[node name="Physics2DShapeQueryResult" type="Node2D" parent="."]
script = ExtResource( 66 )

[node name="Physics2DTestMotionResult" type="Node2D" parent="."]
script = ExtResource( 67 )

[node name="PhysicsShapeQueryParameters" type="Node2D" parent="."]
script = ExtResource( 45 )

[node name="PhysicsShapeQueryResult" type="Node2D" parent="."]
script = ExtResource( 65 )

[node name="RandomNumberGenerator" type="Node2D" parent="."]
script = ExtResource( 62 )

[node name="RegEx" type="Node2D" parent="."]
script = ExtResource( 63 )

[node name="RegExMatch" type="Node2D" parent="."]
script = ExtResource( 64 )

[node name="ResourceFormatLoader" type="Node2D" parent="."]
script = ExtResource( 68 )

[node name="ResourceFormatSaver" type="Node2D" parent="."]
script = ExtResource( 69 )

[node name="ResourceImporter" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="ResourceImporterOGGVorbis" type="Node2D" parent="."]
script = ExtResource( 61 )

[node name="ResourveInteractiveLoader" type="Node2D" parent="."]
script = ExtResource( 60 )

[node name="SceneState" type="Node2D" parent="."]
script = ExtResource( 39 )

[node name="SceneTreeTimer" type="Node2D" parent="."]
script = ExtResource( 80 )

[node name="Semaphore" type="Node2D" parent="."]
script = ExtResource( 81 )

[node name="SpatialVelocityTracker" type="Node2D" parent="."]
script = ExtResource( 38 )

[node name="StreamPeer" type="Node2D" parent="."]
script = ExtResource( 79 )

[node name="StreamPeerBuffer" type="Node2D" parent="."]
script = ExtResource( 70 )

[node name="StreamPeerGDNative" type="Node2D" parent="."]
script = ExtResource( 71 )

[node name="StreamPeerSSL" type="Node2D" parent="."]
script = ExtResource( 73 )

[node name="StreamPeerTCP" type="Node2D" parent="."]
script = ExtResource( 91 )

[node name="SurfaceTool" type="Node2D" parent="."]
script = ExtResource( 72 )

[node name="TCP_Server" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="Thread" type="Node2D" parent="."]
script = ExtResource( 92 )

[node name="TriangleMesh" type="Node2D" parent="."]
script = ExtResource( 93 )

[node name="UPNP" type="Node2D" parent="."]
script = ExtResource( 94 )

[node name="UPNPDevice" type="Node2D" parent="."]
script = ExtResource( 95 )

[node name="VisualScriptFunctionState" type="Node2D" parent="."]
script = ExtResource( 96 )

[node name="WeakRef" type="Node2D" parent="."]
script = ExtResource( 97 )

[node name="WebRTCPeerConnection" type="Node2D" parent="."]
script = ExtResource( 88 )

[node name="WebRTCPeerConnectionGDNative" type="Node2D" parent="."]
script = ExtResource( 89 )

[node name="XMLParser" type="Node2D" parent="."]
script = ExtResource( 90 )

[node name="ARVRPositionalTracker" type="Node2D" parent="."]
script = ExtResource( 82 )

[node name="ARVRServer" type="Node2D" parent="."]
script = ExtResource( 98 )

[node name="AudioServer" type="Node2D" parent="."]
script = ExtResource( 86 )

[node name="PhysicsDirectBodyState" type="Node2D" parent="."]
script = ExtResource( 99 )

[node name="BulletPhysicsDirectBodyState" type="Node2D" parent="."]
script = ExtResource( 84 )

[node name="PhysicsDirectSpaceState" type="Node2D" parent="."]
script = ExtResource( 83 )

[node name="BulletPhysicsDirectSpaceState" type="Node2D" parent="."]
script = ExtResource( 85 )

[node name="PhysicsServer" type="Node2D" parent="."]
script = ExtResource( 107 )

[node name="BulletPhysicsServer" type="Node2D" parent="."]
script = ExtResource( 106 )

[node name="CameraServer" type="Node2D" parent="."]
script = ExtResource( 87 )

[node name="ClassDB" type="Node2D" parent="."]
script = ExtResource( 103 )

[node name="EditorFileSystemDirectory" type="Node2D" parent="."]
script = ExtResource( 104 )

[node name="EditorNavigationMeshGenerator" type="Node2D" parent="."]
script = ExtResource( 105 )

[node name="EditorSelection" type="Node2D" parent="."]
script = ExtResource( 112 )

[node name="Engine" type="Node2D" parent="."]
script = ExtResource( 110 )

[node name="Geometry" type="Node2D" parent="."]
script = ExtResource( 111 )

[node name="IP" type="Node2D" parent="."]
script = ExtResource( 100 )

[node name="IP_Unix" type="Node2D" parent="."]
script = ExtResource( 101 )

[node name="Input" type="Node2D" parent="."]
script = ExtResource( 102 )

[node name="InputDefault" type="Node2D" parent="."]
script = ExtResource( 117 )

[node name="InputMap" type="Node2D" parent="."]
script = ExtResource( 119 )

[node name="JSON" type="Node2D" parent="."]
script = ExtResource( 118 )

[node name="JavaScript" type="Node2D" parent="."]
script = ExtResource( 120 )

[node name="MainLoop" type="Node2D" parent="."]
script = ExtResource( 121 )

[node name="SceneTree" type="Node2D" parent="."]
script = ExtResource( 123 )

[node name="OS" type="Node2D" parent="."]
script = ExtResource( 122 )

[node name="Performance" type="Node2D" parent="."]
script = ExtResource( 125 )

[node name="Physics2DDirectBodyState" type="Node2D" parent="."]
script = ExtResource( 124 )

[node name="Physics2DDirectBodyStateSW" type="Node2D" parent="."]
script = ExtResource( 127 )

[node name="Physics2DDirectSpaceState" type="Node2D" parent="."]
script = ExtResource( 128 )

[node name="Physics2DDirectSpaceStateSW" type="Node2D" parent="."]
script = ExtResource( 129 )

[node name="Physics2DServer" type="Node2D" parent="."]
script = ExtResource( 115 )

[node name="Physics2DServerSW" type="Node2D" parent="."]
script = ExtResource( 116 )

[node name="ProjectSettings" type="Node2D" parent="."]
script = ExtResource( 108 )

[node name="ResourceLoader" type="Node2D" parent="."]
script = ExtResource( 109 )

[node name="ResourceSaver" type="Node2D" parent="."]
script = ExtResource( 113 )

[node name="TranslationServer" type="Node2D" parent="."]
script = ExtResource( 114 )

[node name="TreeItem" type="Node2D" parent="."]
script = ExtResource( 137 )

[node name="UndoRedo" type="Node2D" parent="."]
script = ExtResource( 133 )

[node name="VisualScriptEditor" type="Node2D" parent="."]
script = ExtResource( 126 )

[node name="VisualServer" type="Node2D" parent="."]
script = ExtResource( 135 )

[node name="Array" type="Node2D" parent="."]
script = ExtResource( 134 )

[node name="Basis" type="Node2D" parent="."]
script = ExtResource( 138 )

[node name="Color" type="Node2D" parent="."]
script = ExtResource( 136 )

[node name="Dictionary" type="Node2D" parent="."]
script = ExtResource( 145 )

[node name="Nil" type="Node2D" parent="."]
script = ExtResource( 146 )

[node name="NodePath" type="Node2D" parent="."]
script = ExtResource( 147 )

[node name="Plane" type="Node2D" parent="."]
script = ExtResource( 148 )

[node name="PoolByteArray" type="Node2D" parent="."]
script = ExtResource( 149 )

[node name="PoolColorArray" type="Node2D" parent="."]
script = ExtResource( 139 )

[node name="PoolIntArray" type="Node2D" parent="."]
script = ExtResource( 141 )

[node name="PoolRealArray" type="Node2D" parent="."]
script = ExtResource( 144 )

[node name="PoolStringArray" type="Node2D" parent="."]
script = ExtResource( 153 )

[node name="PoolVector2Array" type="Node2D" parent="."]
script = ExtResource( 151 )

[node name="PoolVector3Array" type="Node2D" parent="."]
script = ExtResource( 152 )

[node name="Quat" type="Node2D" parent="."]
script = ExtResource( 150 )

[node name="RID" type="Node2D" parent="."]
script = ExtResource( 78 )

[node name="Rect2" type="Node2D" parent="."]
script = ExtResource( 76 )

[node name="String" type="Node2D" parent="."]
script = ExtResource( 75 )

[node name="Transform" type="Node2D" parent="."]
script = ExtResource( 77 )

[node name="Transform2D" type="Node2D" parent="."]
script = ExtResource( 142 )

[node name="Variant" type="Node2D" parent="."]
script = ExtResource( 74 )

[node name="Vector2" type="Node2D" parent="."]
script = ExtResource( 143 )

[node name="Vector3" type="Node2D" parent="."]
script = ExtResource( 132 )

[node name="bool" type="Node2D" parent="."]
script = ExtResource( 130 )

[node name="float" type="Node2D" parent="."]
script = ExtResource( 131 )

[node name="int" type="Node2D" parent="."]
script = ExtResource( 140 )
